--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Grigory Cheremin</title>
 	<link rel="stylesheet" href="main.css">
-	<link rel="icon" href=”favicon.ico”>
+	<link rel="shortcut icon" href="icons/favicon.ico.png" type="image/x-icon" />
 </head>
 
 <body class="container">
