--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
 	<link rel="shortcut icon" href="favicon.ico.png" type="image/x-icon">
 </head>
 
-<body class="container">
+<body class="container" background="back.jpg">	
 		<h1>Григорий Черемин</h1>
 		<div class="item">
 			<img class="photo" src="me.png" width="170" height="170" alt="фото">
 		</div>
 
-			<p>Один из семи миллиардов</p>
+			<p>Junior QA Engineer</p>
 
 			<h2>Обо мне</h2>
 
 			<div class="contacts">
-
 				<a href="http://t.me/Greenx">Telegram</a> 
 				<br>
 				<a href="mailto:greenx.new@gmail.com">E-mail</a>
 				<br>
 				<a href="https://github.com/GrigoryCheremin">Github.com</a>
 			</div>
-				<button type="button">Век живи, век учись</button>
+				<button type="button">КРЕДО</button>
 				<script type="text/javascript" src="js.js"></script>
 
 </body>
