--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 			<img class="photo" src="me.png" width="170" height="170" alt="фото">
 		</div>
 
-			<p>Junior QA Engineer</p>
+			<p>
+				<h3>Junior QA Engineer</h3>
+			</p>
 
-			<h2>Обо мне</h2>
+			<h2>Мои контакты</h2>
 
 			<div class="contacts">
 				<a href="http://t.me/Greenx">Telegram</a> 
