--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<br>
 				<a href="https://github.com/GrigoryCheremin">Github.com</a>
 			</div>
-				<button type="button">КРЕДО</button>
+				<button type="button">Сюда можно нажать</button>
 				<script type="text/javascript" src="js.js"></script>
 
 </body>
