--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="container" background="back.jpg">	
 		<h1>Григорий Черемин</h1>
 		<div class="item">
-			<img class="photo" src="me.png" width="170" height="170" alt="фото">
+			<img class="photo" src="me.jpg" alt="фото">
 		</div>
 
 			<p>
@@ -26,7 +26,7 @@
 				<br>
 				<a href="https://github.com/GrigoryCheremin">Github.com</a>
 			</div>
-				<button type="button">Сюда можно нажать</button>
+				<button type="button">КРЕДО</button>
 				<script type="text/javascript" src="js.js"></script>
 
 </body>
